--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
     body{
         font-family: monospace;
     }
+    * {
+        font-family: "popins";
+    }
 
     /* Root Variables */
     :root {
@@ -23,6 +26,7 @@
         --main-color: #f3550b;
         --text-color: #fff;
         --second-bg-color: #161616;
+        --uniq: #ea580c;
     }
 
     /* General Styles */
@@ -217,22 +221,40 @@
 
 
 
-.Service{
+.Skill{
     background: var(--second-bg-color);
+    margin: 0;
+    padding-right: auto;
+    padding-left: auto ;
+    padding-top: 30px;
 }   
+.skill-merge{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.skill-line{
+    height: 3px;
+    width: 110px;
+    background-color: #f0e4dd;
+    box-shadow: 0 0  50px var(--main-color);
+    margin-bottom: 70px;
+}
 .heading{
     color: #f3550b;
     font-size: 2.8rem;
     text-align: center;
+    margin: 3px;
 }
 
-.Service-container{
+.Skill-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     align-items: center;
     gap: 2.5rem;
 } 
-.Service-box{
+.Skill-box{
     background-color: var(--main-color);
     height: 450px;
     border-radius: 3rem;
@@ -240,12 +262,15 @@
     transition: 0.3s ease;
 }
 
-.Service-box:hover{
+.Skill-box:hover{
     background: white;
     color: var(--main-color);
     transform: scale(1.03);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 100px var(--main-color);
+                transform: scale(1.02);
 }
-.Service-box .Service-info{
+.Skill-box .Skill-info{
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -255,14 +280,14 @@
     padding: 5em;
 }
 
-.Service-info h4{
+.Skill-info h4{
     color: rgb(57, 24, 185);
-    font-size:larger;
+    font-size:2rem;
     font-weight: 500;
     margin-bottom: 1rem;
 }
 
-.Service-info p{
+.Skill-info p{
     font-size: 1rem;
     font-weight: 400;
     max-height: 100px;
@@ -271,11 +296,150 @@
 
 
 
+/* ------------------------project------------------------------- */
+
+.project{
+    background-color: #000000;
+    margin: 0;
+    padding-right: auto;
+    padding-left: auto ;
+    padding-top: 30px;
+}
+.headline{
+    font-size: 2rem;
+    text-align: center;
+    color:#ea580c;
+    margin-top: 0px;
+    font-size: 3.5rem;
+    display: flex;
+   margin-bottom: 2px;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 7 2  5px var(--bg-color);
+}
+.ject{
+    color: rgb(231, 221, 221);
+}
+.merge{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+}
+.line{
+    height: 3px;
+    width: 300px;
+    background-color: #f0e4dd;
+    box-shadow: 0 0  50px var(--main-color);
+}
+.line1{
+    height: 3px;
+    width: 100%;
+    background-color: #ea580c;
+    box-shadow: 0 0  50px var(--main-color);
+}
+.line:hover{
+    box-shadow: 200 100  100px var(--main-color)
+}
+.project-box{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    place-items: center;
+    gap: 5rem;
+    row-gap: 5rem;
+}
+
+.project-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 3rem;
+   
+    
+    cursor: pointer;
+    box-shadow: 0 0  5px var(--main-color);
+    transition: 0.3s ease;
+}
+.project-card img{
+    height: 340px;
+    width: 550px;
+    padding: 30px;
+    border-radius: 13%;
+}
+
+.project-card:hover{
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
+                transform: scale(1.02);
+}
+
+.project-card h3{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 3rem;
+    color: var(--uniq);
+}
+.project-card p{
+    font-size: 1rem;
+    color: aqua;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+}
+.project-card .a{
+    
+    margin-bottom: 30px;
+    margin-top: 20px;
+    text-decoration: none;
+    color: #ea580c;   
+}
+ .btn:hover{
+    background-color: rgb(20, 20, 30);
+    text-decoration: underline; 
+}
+.a:hover{
+    background-color: rgb(20, 20, 30);
+    text-decoration: underline; 
+}
+.project-card .btn{
+    padding: 12px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    height: 40px;
+}
+
 
 /* -conact me---------------- */
 
+.contact{
+    margin: 0;
+    padding-right: auto;
+    padding-left: auto ;
+    padding-top: 30px;
+}
+.contact1{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.line3{
+    height: 3px;
+    width: 20%;
+   margin-left: 496px;
+   margin-top:0 ;
+    background-color: #ea580c;
+    box-shadow: 0 0  50px var(--main-color);
+    margin-bottom: 70px;
+    margin-top: 2px;
+}
 .contact h2{
-    margin-bottom: 3rem;
+    margin-bottom: 0;
     color: white;
 }
 .contact form{
@@ -319,7 +483,8 @@
     bottom: 0;
     width: 100%;
     padding: 40px 0;
-    background: var(--main-color);
+    background: linear-gradient(to bottom, #f35500 80% , black  );
+
 }
 .footer .social{
     text-align: center;
